--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "prisma": "^5.13.0",
     "rimraf": "^5.0.5",
@@ -23,8 +25,11 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "@prisma/extension-pulse": "^1.0.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "env-var": "^7.4.1",
-    "express": "^4.19.2"
+    "env-var": "^7.5.0",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13"
   }
 }
